--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <link href="./cssDestination/styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
         <!-- <link href="./js/script.js" rel="script">  -->
     </head>
     <body>
@@ -85,6 +85,6 @@
         </main>
 
         <!--=============== MAIN JS ===============-->
-        <script src="./js/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
