--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="nav__data">
                     <div class="nav__mask">
-                        <img src="assets/images/profile.jpg" alt ="" class="nav__img">
+                        <img src="profile.jpg" alt ="" class="nav__img">
                         <!-- <span><br>Hi i am <br></span>
                         <h3>Muhammad Bilal</h3> -->
                     </div>
